--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -67,7 +67,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" id="btnCerrar1PRG" data-dismiss="modal" aria-hidden="true" style="display:block">&times;</button>
-                            <h4 class="modal-title">Reservar programa</h4>
+                            <h4 class="modal-title">Detalle Programa</h4>
                         </div>
 
                         <div class="modal-body" id="divPopupPRG"></div>
