--- a/views/programas/centerBox/imprimir.phtml
+++ b/views/programas/centerBox/imprimir.phtml
@@ -79,8 +79,8 @@
                             <td style="font-size: 12px; text-align: center"> SINGLE </td>
                             <td style="font-size: 12px; text-align: center"> DOBLE </td>
                             <td style="font-size: 12px; text-align: center"> TRIPLE </td>
-                            <td style="font-size: 12px; text-align: center"> CHILD 1</td>
-                            <td style="font-size: 12px; text-align: center"> CHILD 2 </td>
+                            <td style="font-size: 12px; text-align: center"> NI&Ntilde;O 1</td>
+                            <td style="font-size: 12px; text-align: center"> NI&Ntilde;O 2 </td>
                             <td style="font-size: 12px; text-align: center"> PLAN FAMILIAR </td>
                         </tr>
                         <tr align="center">
