se agregan cambios visuales en la parte de reservar programas se crea nuevo controller para llamar funciones de functions y se agrega validacion en la parte de correo

--- a/views/programas/centerBox/cotizacion.phtml
+++ b/views/programas/centerBox/cotizacion.phtml
@@ -262,3 +262,8 @@
         </div>
     </form>
 </div>
+<script type="text/javascript">
+
+$("#nombreCot").validaCampos('abcdefghijklmnñopqrstuvwxyz');
+$("#telefonoCot").validaCampos('0123456789() +');
+</script>
