--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -37,7 +37,7 @@ if ($incluyeArray) {
 }
 
 
-Session::set('sess_descripcionServicioPRG', $this->objOpcionPrograma[0]->getNombre() . ": <br><br>" . $incluye);
+Session::set('sess_descripcionServicioPRG', $this->objOpcionPrograma[0]->getNombre() . " <br><br>" . $incluye);
 ?>
 <script type="text/javascript">
     $('html').on('click', function (e) {
