--- a/views/programas/centerBox/pasajeros.phtml
+++ b/views/programas/centerBox/pasajeros.phtml
@@ -78,6 +78,7 @@
     <input type="hidden" name="plan"value="<?php echo htmlspecialchars(json_encode($this->plan)); ?>">
     <input type="hidden" name="cant" value="<?php echo htmlspecialchars(json_encode($this->cant)); ?>">
     <input type="hidden" name="idHot" value="<?php echo htmlspecialchars(json_encode($this->idHot)); ?>">
+    <input type="hidden" name="idOpc" value="<?php echo $this->codIopc;?>">
     <div calss ="row">
         <div class=" col-md-2"></div>
         <div class=" col-md-8">
