--- a/views/programas/centerBox/cotizacion.phtml
+++ b/views/programas/centerBox/cotizacion.phtml
@@ -193,14 +193,16 @@
                                             <td>
                                                 <select name="DP_cmbChild_<?php echo $i; ?>" id="DP_cmbChild_<?php echo $i; ?>" onchange="habilitaPlan('<?php echo $this->chd1;?>','<?php echo $this->chd2;?>','<?php echo $this->pf;?>',<?php echo $i;?>); habilitaEdadChild(this.value, <?php echo $i; ?>, 'DP_EdadChild')">
                                                     <option value="0">0</option>
-                                                    <?php if ($this->chd1 > 0) { ?>
+                                                    <?php if ($this->chd1 > 0 && Session::get('sessRP_edadChd1')>0 ) { ?>
 
                                                         <option value="1">1</option>
                                                     <?php } ?>
                                                     <?php if ($this->chd2 > 0 || $this->pf > 0) { ?>
-
+                                                        <?php if( Session::get('sessRP_edadChd1')>0) {?>
                                                         <option value="2">2</option>
-                                                    <?php } ?>
+                                                        <?php }
+                                                        
+                                                        } ?>
                                                 </select>
                                             </td>
                                         </tr>
@@ -213,7 +215,7 @@
                                             <td>
                                                 <select name ="DP_EdadChild_1_<?php echo $i; ?>" id="DP_EdadChild_1_<?php echo $i; ?>"disabled="disabled">
                                                     <option value="0">0</option>
-                                                    <?php for ($x = 2; $x <= 12; $x++) { ?>
+                                                    <?php for ($x = 2; $x <= Session::get('sessRP_edadChd1'); $x++) { ?>
                                                         <option value="<?php echo $x; ?>"><?php echo $x; ?></option>
                                                     <?php } ?>
                                                 </select>
@@ -222,7 +224,7 @@
                                             <td>
                                                 <select name ="DP_EdadChild_2_<?php echo $i; ?>" id="DP_EdadChild_2_<?php echo $i; ?>"disabled="disabled">
                                                     <option value="0">0</option>
-                                                    <?php for ($x = 2; $x <= 12; $x++) { ?>
+                                                    <?php for ($x = 2; $x <= Session::get('sessRP_edadChd2'); $x++) { ?>
                                                         <option value="<?php echo $x; ?>"><?php echo $x; ?></option>
                                                     <?php } ?>
                                                 </select>
@@ -257,7 +259,7 @@
         <div class="row">
             <div class="col-md-12">
                 <br>
-                <a class="btn btn-primary btn-sm pull-right" id="botonMail"onclick="Programa.prototype.enviarMail('botonMail', '<?php echo $this->form; ?>', 'detalleCotizacion')" > Solicitar Cotizaci&oacute;n </a>
+                <a class="btn btn-primary btn-sm pull-right" id="botonMail"onclick="Programa.prototype.enviarMail('botonMail', '<?php echo $this->form; ?>', 'detalleCotizacion','<?php echo Session::get('sess_SGL');?>','<?php echo Session::get('sess_DBL');?>','<?php echo Session::get('sess_TPL');?>','<?php echo Session::get('sess_PF');?>','<?php echo Session::get('sess_CHD1'); ?>','<?php echo Session::get('sess_CHD2'); ?>')" > Solicitar Cotizaci&oacute;n </a>
             </div>
         </div>
     </form>
