--- a/views/programas/centerBox/pasajeros.phtml
+++ b/views/programas/centerBox/pasajeros.phtml
@@ -116,14 +116,16 @@
                                         <td>
                                             <select name="DP_cmbChild_<?php echo $i; ?>" id="DP_cmbChild_<?php echo $i; ?>" onchange="habilitaPlan('<?php echo $this->chd1;?>','<?php echo $this->chd2;?>','<?php echo $this->pf;?>',<?php echo $i;?>); habilitaEdadChild(this.value, <?php echo $i; ?>, 'DP_EdadChild')">
                                                 <option value="0">0</option>
-                                                <?php if ($this->chd1 > 0) { ?>
+                                                <?php if ($this->chd1 > 0 && Session::get('sessRP_edadChd1')>0) { ?>
 
                                                     <option value="1">1</option>
                                                 <?php } ?>
                                                 <?php if ($this->chd2 > 0 || $this->pf > 0) { ?>
-
+                                                    <?php if( Session::get('sessRP_edadChd1')>0) {?>
                                                     <option value="2">2</option>
-                                                <?php } ?>
+                                                    
+                                                    <?php }
+                                                } ?>
                                             </select>
                                         </td>
                                     </tr>
@@ -179,7 +181,7 @@
                 <tr>
                     <td colspan="2" align="right">
                         <a class="btn btn-primary btn-sm" id="Siguiente" onclick="fadeIn('detallePopup');
-                                Programa.prototype.procesoDetallePasajeros('frmDetalleReserva_1_<?php echo $this->cntP; ?>', '<?php echo BASE_URL; ?>programas/detallePasajeros', 'Siguiente', 'divPopupIn', '<?php echo $this->form; ?>');"> Siguiente </a>
+                                Programa.prototype.procesoDetallePasajeros('frmDetalleReserva_1_<?php echo $this->cntP; ?>', '<?php echo BASE_URL; ?>programas/detallePasajeros', 'Siguiente', 'divPopupIn', '<?php echo $this->form; ?>','<?php echo Session::get('sess_SGL'); ?>','<?php echo Session::get('sess_DBL'); ?>','<?php echo Session::get('sess_TPL');?>','<?php echo Session::get('sess_PF'); ?>','<?php echo Session::get('sess_CHD2'); ?>');"> Siguiente </a>
                     </td>
                 </tr>
             </table>
